# shiva

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
.github/: CONTRIBUTING.md
dockerfiles/: Dockerfile  docker-compose.cli.yml  docker-compose.shiva-rest-connector.yml  docker_requirements.txt
docs/: Shiva.pptx  conf.py  index.md
examples/: README.md  client.py  server.py
examples/connector_rest_shiva/: README.md  client.py  client_tcp.py  requirements.txt  server.py  server_filter.py
examples/cpp/: CMakeLists.txt  Throw.hpp  throw_client.cpp
examples/cpp_client/: CMakeLists.txt  README.md  Shiva.hpp  Throw.hpp  server.py  shiva_client.cpp  throw_client.cpp
examples/inference_server_demo/: README.md  client.py
examples/simple_client_server/: README.md  client.py  server.py
shiva/: __about__.py  __init__.py  bridges.py  clients.py  messages.py  model.py  servers.py
tests/: test_shiva.py
