[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "shiva"
dynamic = ["version"]
description = 'Shiva Communication Protocol'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [{ name = "m4nh", email = "degregorio.daniele@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=1.10.13,<2.0.0",
  "numpy",
  "deepdiff",
  "loguru",
  "rich",
]

[project.urls]
Documentation = ""
Issues = ""
Source = ""

[tool.hatch.version]
path = "shiva/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-asyncio"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9"]

[tool.hatch.envs.lint]
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]

[project.optional-dependencies]
dev = [
  "pytest>=7.1.2",
  "pytest-asyncio>=0.21.1",
  "pytest-cov",
  "black>=23.1.0",
  # "mypy>=1.0.0",
  # "ruff>=0.0.243",
  "flake8-pyproject",
]

[tool.hatch.envs.lint.scripts]
detached = true
typing = "mypy --install-types --non-interactive {args:shiva tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py39"]
line-length = 88
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["shiva"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["shiva", "tests"]
branch = true
parallel = true
omit = ["shiva/__about__.py"]

[tool.coverage.paths]
shiva = ["shiva", "shiva"]
tests = ["tests", "tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = ['__init__.py:F401']
max-line-length = 88


[project.scripts]
shiva = "shiva.cli.main:cli"
